--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 47: To Zion - Ms. Lauryn Hill
+          Week 48: Show Me - Joey Bada$$
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.4/10</h2>
+            <h2 id="rating">Overall Rating 7.9/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7x6hO9VMAee9x1iWaeNkL6?si=27426df4eb7748ee"
+                    href="https://open.spotify.com/track/2uuJs2nltcYFh9pkKP7bW4?si=7103f9c191e64cdc"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=SWz-RU3OtmA"
+                    href="https://www.youtube.com/watch?v=M1X5Qp9vThc"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The ensemble of vocalists in the background of the latter few
-              choruses. They really enthuse the powerful lyrics of this chorus,
-              not to mention the superb notes that Ms. Lauryn Hill is belting
-              out.
+              I like when Joey Bada$$ throws some adlibs in between the Men I
+              Trust vocals, it's a crazy collab that I couldn't be happier with.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              In what is one of the greatest and most influential hip-hop albums
-              of all time, "To Zion" was really speaking to me this week. As an
-              ode to her son Zion, it speaks worlds about motherhood and the
-              pressures of being a woman in a male-dominated career. While I am
-              about as far removed from these experiences as socially possible,
-              the power that exudes from this song and its current reputation is
-              truly inspiring. Listen to this one if you're feeling
-              family-oriented. Make it a great week!
+              I used to listen to Joey Bada$$ quite a bit and really enjoyed
+              most songs from his albums "1999" and "2000". This track had
+              somehow slipped through the cracks of my extensive listening and
+              it somehow just appeared on my radar. This is almost a remix of
+              sorts on Men I Trust's "Show Me How", a song that I have really
+              loved for some time now. I highly suggest giving that song a
+              listen too, but for the more rap-inclined, this song is an
+              excellent swirling of genres. Give this one a listen and make it a
+              good week!!
             </p>
           </div>
         </div>
@@ -160,19 +159,17 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">
-            Omar Mejia: Invincible - Omar Apollo (feat. Daniel Caesar)
-          </h2>
+          <h2 style="font-size: 30px" id="title">Zoe: Summer Girl - HAIM</h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.3/10</h2>
+              <h2 id="rating">Overall Rating 8.7/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7jhxagwOk9y1HC5ciRfmkQ?si=b7ac240e1cf04816"
+                    href="https://open.spotify.com/track/5pSRBmJhkfZm1eilG3VW3L?si=ba87898618cb4a09"
                     target="_blank"
                     ><center>
                       <img
@@ -186,7 +183,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=BAKvb8qD4Cw"
+                    href="https://www.youtube.com/watch?v=ZjuA_o6Jzyo"
                     target="_blank"
                     ><center>
                       <img
@@ -203,18 +200,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This is easily one of my favorite songs by Omar Apollo. When I
-            initially listened to this song at 2 AM for the first time, the
-            chorus left me deep in thought: “If I were to go, tell me, would you
-            notice me?” This lyric alone can be interpreted in so many different
-            ways. It evokes inner emotions and makes you ponder about what other
-            people think of you. In the unfortunate case that something happens,
-            how will people remember you? Omar shows his vulnerability by
-            questioning the nature of his relationship. I absolutely love it
-            because it feels so authentic and personal. Daniel Caesar being
-            featured in this song is the cherry on top of this wonderfully
-            written song. I am so glad that I’ve been able to see this song
-            performed live twice now. :’)
+            The perfect summer song! I circle back to HAIM every summer because
+            their music style begs for driving with sunglasses and the car
+            windows down while blasting them from the speakers. Summer Girl has
+            a great horn instrumental track and just makes me want to dance in
+            the street in the rain! The lyrics are nostalgic and the alto vocals
+            of Danielle are gorgeous. Also the vocalizing is a reference to
+            “Walk on the Wild Side”!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -454,6 +446,11 @@
               <td>46</td>
               <td>Attention - Doja Cat</td>
               <td>8.8/10</td>
+            </tr>
+            <tr>
+              <td>47</td>
+              <td>To Zion - Ms. Lauryn Hill</td>
+              <td>8.4/10</td>
             </tr>
           </table>
         </div>
