--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 48: Show Me - Joey Bada$$
+          Week 49: Champagne Poetry - Drake
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 7.9/10</h2>
+            <h2 id="rating">Overall Rating 7.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2uuJs2nltcYFh9pkKP7bW4?si=7103f9c191e64cdc"
+                    href="https://open.spotify.com/track/2HSmyk2qMN8WQjuGhaQgCk?si=696caab584c84a51"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=M1X5Qp9vThc"
+                    href="https://www.youtube.com/watch?v=IxVuT8cgccM"
                     target="_blank"
                     ><center>
                       <img
@@ -113,20 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I like when Joey Bada$$ throws some adlibs in between the Men I
-              Trust vocals, it's a crazy collab that I couldn't be happier with.
+              There are some lines that really get me giggling on this track:
+              "it's the pretty boys versus the petty boys", "cashmere knits for
+              the nighttime boat rides", and more.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I used to listen to Joey Bada$$ quite a bit and really enjoyed
-              most songs from his albums "1999" and "2000". This track had
-              somehow slipped through the cracks of my extensive listening and
-              it somehow just appeared on my radar. This is almost a remix of
-              sorts on Men I Trust's "Show Me How", a song that I have really
-              loved for some time now. I highly suggest giving that song a
-              listen too, but for the more rap-inclined, this song is an
-              excellent swirling of genres. Give this one a listen and make it a
-              good week!!
+              I apologize for displaying what has to be one of the worst album
+              covers ever from Drake's "Certified Lover Boy". As a whole, this
+              album plummets to some of Drake's worst projects, with a few
+              redeeming tracks including this one. Rapping about his success
+              over a simplistic production, it's a familiar recipe that has
+              built Drake into the sensation that he is. I really do not have
+              much more commentary for this song, it's fairly face-value but
+              something about it has really worked for me this week. Give this
+              one a listen and make it a great week!!
             </p>
           </div>
         </div>
@@ -159,17 +160,19 @@
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
-          <h2 style="font-size: 30px" id="title">Zoe: Summer Girl - HAIM</h2>
+          <h2 style="font-size: 30px" id="title">
+            Amber Chen: My Mother and I - Lucy Dacus
+          </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.7/10</h2>
+              <h2 id="rating">Overall Rating 9.7/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5pSRBmJhkfZm1eilG3VW3L?si=ba87898618cb4a09"
+                    href="https://open.spotify.com/track/3zNFFDW3eBEQXwyreBODoj?si=ddf90b41e9464e64"
                     target="_blank"
                     ><center>
                       <img
@@ -183,7 +186,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=ZjuA_o6Jzyo"
+                    href="https://www.youtube.com/watch?v=9Q_weNUt4m8"
                     target="_blank"
                     ><center>
                       <img
@@ -200,13 +203,19 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            The perfect summer song! I circle back to HAIM every summer because
-            their music style begs for driving with sunglasses and the car
-            windows down while blasting them from the speakers. Summer Girl has
-            a great horn instrumental track and just makes me want to dance in
-            the street in the rain! The lyrics are nostalgic and the alto vocals
-            of Danielle are gorgeous. Also the vocalizing is a reference to
-            “Walk on the Wild Side”!
+            “My Mother and I” is one of the most intimate descriptions of a
+            mother-daughter relationship I’ve ever heard in my life and is also
+            my favorite Lucy Dacus song. It explores motherhood and how girls
+            especially inherit both their shame and love, creating a turbulent
+            journey of self-examination and daughterhood. Although the verses
+            explore pain and fear, the chorus always returns to this idea of
+            unspoken connection and comfort a mother and daughter share while
+            the ending both thanks and forgives her mother for all that she has
+            given her. A single guitar and haunting production emphasizes the
+            emotionality throughout, creating a song that almost perfectly
+            captures what I feel. The song studies a difficult topic yet has
+            helped me process it, making it one of the most essential songs to
+            my life.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -451,6 +460,11 @@
               <td>47</td>
               <td>To Zion - Ms. Lauryn Hill</td>
               <td>8.4/10</td>
+            </tr>
+            <tr>
+              <td>48</td>
+              <td>Show Me - Joey Bada$$</td>
+              <td>7.9/10</td>
             </tr>
           </table>
         </div>
