--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 49: Champagne Poetry - Drake
+          Week 50: Spud Infinity - Big Thief
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,13 +32,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 7.7/10</h2>
+            <h2 id="rating">Overall Rating 8.5/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2HSmyk2qMN8WQjuGhaQgCk?si=696caab584c84a51"
+                    href="https://open.spotify.com/track/3Q6VfeIZ1bTjWiNe2Or4LQ?si=3dd0aee6d60b423b"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=IxVuT8cgccM"
+                    href="https://www.youtube.com/watch?v=XYFBNA7uaJQ"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              There are some lines that really get me giggling on this track:
-              "it's the pretty boys versus the petty boys", "cashmere knits for
-              the nighttime boat rides", and more.
+              The "boing-ing" from maybe a jaw harp(?) and fiddle in the
+              background really elevates the folk-y, farmhouse vibe of this song
+              and helps it stand out to me within Big Thief's 20-track deep
+              album. I also really enjoy how the word "celestial" s broken into
+              two different lines in the chorus.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I apologize for displaying what has to be one of the worst album
-              covers ever from Drake's "Certified Lover Boy". As a whole, this
-              album plummets to some of Drake's worst projects, with a few
-              redeeming tracks including this one. Rapping about his success
-              over a simplistic production, it's a familiar recipe that has
-              built Drake into the sensation that he is. I really do not have
-              much more commentary for this song, it's fairly face-value but
-              something about it has really worked for me this week. Give this
-              one a listen and make it a great week!!
+              Big Thief's most recent Album from 2022 "Dragon New Warm Mountain
+              I Believe In You" has me hooked this summer and has skyrocketed to
+              my favorite Big Thief project of all time. It is quite lengthy at
+              1 hour 20 minutes, but nearly every song fits right in with the
+              others, "Spud Infinity" being no exception. Listen to this whole
+              album while making lunch or something, and make sure to make it a
+              good week!!
             </p>
           </div>
         </div>
