--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 50: Spud Infinity - Big Thief
+          Week 51: Consideration - Rihanna
         </h2>
         <div class="row">
           <div class="column" id="leftColumn">
@@ -32,7 +32,7 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.5/10</h2>
+            <h2 id="rating">Overall Rating 7.8/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=XYFBNA7uaJQ"
+                    href="https://www.youtube.com/watch?v=WSSShAOKYfo"
                     target="_blank"
                     ><center>
                       <img
@@ -113,21 +113,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The "boing-ing" from maybe a jaw harp(?) and fiddle in the
-              background really elevates the folk-y, farmhouse vibe of this song
-              and helps it stand out to me within Big Thief's 20-track deep
-              album. I also really enjoy how the word "celestial" s broken into
-              two different lines in the chorus.
+              Rihanna and SZA's vocals here are so perfectly complementary to
+              each other, I find myself having some trouble differentiating the
+              two sometimes. I've been really into SZA's old sound recently and
+              I think these vocals are the epiphany of that time in her career.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Big Thief's most recent Album from 2022 "Dragon New Warm Mountain
-              I Believe In You" has me hooked this summer and has skyrocketed to
-              my favorite Big Thief project of all time. It is quite lengthy at
-              1 hour 20 minutes, but nearly every song fits right in with the
-              others, "Spud Infinity" being no exception. Listen to this whole
-              album while making lunch or something, and make sure to make it a
-              good week!!
+              Coming from one of the most influential pop albums of the 2010s,
+              this track sets the pace for an album as groundbreaking as
+              Rihanna's "Anti". The punchiness (and slightly bad quality) of the
+              bass, and the deep and almost grungy vocals, it all screams 2016
+              in the best way possible. Check this one out and make it a great
+              week!
             </p>
           </div>
         </div>
@@ -465,6 +463,16 @@
               <td>48</td>
               <td>Show Me - Joey Bada$$</td>
               <td>7.9/10</td>
+            </tr>
+            <tr>
+              <td>49</td>
+              <td>Champagne Poetry - Drake</td>
+              <td>7.7/10</td>
+            </tr>
+            <tr>
+              <td>50</td>
+              <td>Spud Infinity</td>
+              <td>8.5/10</td>
             </tr>
           </table>
         </div>
