--- a/songs.html
+++ b/songs.html
@@ -21,8 +21,36 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 51: Consideration - Rihanna
+          Week 52: TELEKINESIS - Travis Scott
         </h2>
+        <div id="buttonPopup">
+          <div id="sotwOverlay"></div>
+          <div id="sotwPopup">
+            <div class="popupcontent">
+              <br />
+              <h1>Happy Anniversary to SotW!!!</h1>
+              <br />
+              <p id="popupWords">
+                It's the 52nd week of Song of the Week, which means it has now
+                been a whole year since I started this! This is truly just a
+                passion project for me that I admittedly haven't put a ton of
+                effort into otherwise. I have loved making this more interactive
+                and I have some more plans that I just do not have time to
+                execute right now. For now, enjoy this confetti and an embedded
+                spotify playlist (it took me half of the day to code it into the
+                site lol). Thank you all for your earnest participation in this
+                little project, I hope you have taken something away from this
+                at the very least. Anyways, enjoy today's regularly scheduled
+                SotW.
+              </p>
+              <center>
+                <button id="sotwButton" onclick="clearPopup()">
+                  Go To Song of the Week
+                </button>
+              </center>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="column" id="leftColumn">
             <img
@@ -32,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 7.8/10</h2>
+            <h2 id="rating">Overall Rating 8.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3Q6VfeIZ1bTjWiNe2Or4LQ?si=3dd0aee6d60b423b"
+                    href="https://open.spotify.com/track/1i9lZvlaDdWDPyXEE95aiq?si=ad1f5e3e6a9544e7"
                     target="_blank"
                     ><center>
                       <img
@@ -52,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=WSSShAOKYfo"
+                    href="https://www.youtube.com/watch?v=xl5LunV-OkU"
                     target="_blank"
                     ><center>
                       <img
@@ -113,19 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Rihanna and SZA's vocals here are so perfectly complementary to
-              each other, I find myself having some trouble differentiating the
-              two sometimes. I've been really into SZA's old sound recently and
-              I think these vocals are the epiphany of that time in her career.
+              SZA!!!!! What an angelic verse she laid down on this track I was
+              paralyzed the first time I heard it. The production overall was
+              throroughly impressive and unexpected from Travis Scott as well.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Coming from one of the most influential pop albums of the 2010s,
-              this track sets the pace for an album as groundbreaking as
-              Rihanna's "Anti". The punchiness (and slightly bad quality) of the
-              bass, and the deep and almost grungy vocals, it all screams 2016
-              in the best way possible. Check this one out and make it a great
-              week!
+              The long-awaited and extremely anticipated album "Utopia" from
+              Travis Scott came out this week. While not always the biggest fan
+              of his work, this album was a beautiful amalgamation of so many
+              current rap artists and producers, combining the current sounds of
+              the rap/hip-hop/r&b industry into one album. This track in
+              particular stood out to me as it leaned haviest into the
+              atmospherical r&b that is of my liking. Give this one a listen
+              and, of course, make it a great week!
             </p>
           </div>
         </div>
@@ -159,18 +188,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Amber Chen: My Mother and I - Lucy Dacus
+            Ryan Garbe: Ooh La La - Faces
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.7/10</h2>
+              <h2 id="rating">Overall Rating 10/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3zNFFDW3eBEQXwyreBODoj?si=ddf90b41e9464e64"
+                    href="https://open.spotify.com/track/4lJ6YVXQ0jUk5ILu0PSrA4?si=433c835a77784f7a"
                     target="_blank"
                     ><center>
                       <img
@@ -184,7 +213,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=9Q_weNUt4m8"
+                    href="https://www.youtube.com/watch?v=bRukNU3jkIM"
                     target="_blank"
                     ><center>
                       <img
@@ -201,20 +230,33 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            “My Mother and I” is one of the most intimate descriptions of a
-            mother-daughter relationship I’ve ever heard in my life and is also
-            my favorite Lucy Dacus song. It explores motherhood and how girls
-            especially inherit both their shame and love, creating a turbulent
-            journey of self-examination and daughterhood. Although the verses
-            explore pain and fear, the chorus always returns to this idea of
-            unspoken connection and comfort a mother and daughter share while
-            the ending both thanks and forgives her mother for all that she has
-            given her. A single guitar and haunting production emphasizes the
-            emotionality throughout, creating a song that almost perfectly
-            captures what I feel. The song studies a difficult topic yet has
-            helped me process it, making it one of the most essential songs to
-            my life.
+            Ooh la la lyrics are of a grandpa telling his grandson the ways of
+            women, although alot of the lyrics are hard to make out. Even though
+            some of grandpa's advice/experience may be true, I really don't
+            listen to the lyrics in this song as much as I enjoy the instruments
+            and smooth beat. This is a feel good song that I have been listening
+            to for years and will continue for years to come (my kids will be
+            chuckling), they've been forced to listen for years now! I can
+            listen to ooh la la over and over due to combination of instruments,
+            his voice and the contagious beat. Being picked as celebrity of the
+            week may have been pondering for JR, but picking Ooh La La for me
+            was super easy, one of my most favorite songs ever!
           </p>
+          <p id="celebOverall">Proud father of JR Garbe,</p>
+          <p id="celebOverall">Ryan Garbe</p>
+        </div>
+        <div class="divider"><center>Songs of the Week Spotify</center></div>
+        <div id="celebSotW">
+          <iframe
+            style="border-radius: 12px"
+            src="https://open.spotify.com/embed/playlist/3mHbGKwdTwzrQDlfrqfUKv?utm_source=generator"
+            width="100%"
+            height="570"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+          ></iframe>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
         <div id="archive">
@@ -471,8 +513,13 @@
             </tr>
             <tr>
               <td>50</td>
-              <td>Spud Infinity</td>
+              <td>Spud Infinity - Big Thief</td>
               <td>8.5/10</td>
+            </tr>
+            <tr>
+              <td>51</td>
+              <td>Consideration - Rihanna</td>
+              <td>7.8/10</td>
             </tr>
           </table>
         </div>
