--- a/songs.html
+++ b/songs.html
@@ -21,9 +21,9 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 52: TELEKINESIS - Travis Scott
+          Week 54: Will I See You Again? - Thee Sacred Souls
         </h2>
-        <div id="buttonPopup">
+        <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
           <div id="sotwPopup">
             <div class="popupcontent">
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.7/10</h2>
+            <h2 id="rating">Overall Rating 8.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1i9lZvlaDdWDPyXEE95aiq?si=ad1f5e3e6a9544e7"
+                    href="https://open.spotify.com/track/7dn4l1TMNiBNa4CYWkBWqF?si=c1e7f4a5b0924de8"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=xl5LunV-OkU"
+                    href="https://www.youtube.com/watch?v=IGgb10A_2c8"
                     target="_blank"
                     ><center>
                       <img
@@ -141,20 +141,18 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              SZA!!!!! What an angelic verse she laid down on this track I was
-              paralyzed the first time I heard it. The production overall was
-              throroughly impressive and unexpected from Travis Scott as well.
+              This 70's r&b/soul revivial sounds so good with today's recording
+              technology, it's a refreshing and "new" sound transported from an
+              earlier era.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              The long-awaited and extremely anticipated album "Utopia" from
-              Travis Scott came out this week. While not always the biggest fan
-              of his work, this album was a beautiful amalgamation of so many
-              current rap artists and producers, combining the current sounds of
-              the rap/hip-hop/r&b industry into one album. This track in
-              particular stood out to me as it leaned haviest into the
-              atmospherical r&b that is of my liking. Give this one a listen
-              and, of course, make it a great week!
+              This is one of only two songs I know from this recent hit band,
+              yet the two I do know are quite impressive. This was their
+              earliest single from 2021 that preluded their first record release
+              in August of last year. I guess I will have to give it a listen
+              now! Okay, give this one a listen to jazz up your Sunday and make
+              it a great week!
             </p>
           </div>
         </div>
@@ -488,41 +486,55 @@
             </tr>
             <tr>
               <td>45</td>
+              <td>Across the Universe - Fiona Apple</td>
+              <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>46</td>
               <td>Popular - The Weeknd</td>
               <td>7.5/10</td>
             </tr>
             <tr>
-              <td>46</td>
+              <td>47</td>
               <td>Attention - Doja Cat</td>
               <td>8.8/10</td>
             </tr>
             <tr>
-              <td>47</td>
+              <td>48</td>
               <td>To Zion - Ms. Lauryn Hill</td>
               <td>8.4/10</td>
             </tr>
             <tr>
-              <td>48</td>
+              <td>49</td>
               <td>Show Me - Joey Bada$$</td>
               <td>7.9/10</td>
             </tr>
             <tr>
-              <td>49</td>
+              <td>50</td>
               <td>Champagne Poetry - Drake</td>
               <td>7.7/10</td>
             </tr>
             <tr>
-              <td>50</td>
+              <td>51</td>
               <td>Spud Infinity - Big Thief</td>
               <td>8.5/10</td>
             </tr>
             <tr>
-              <td>51</td>
+              <td>52</td>
               <td>Consideration - Rihanna</td>
               <td>7.8/10</td>
             </tr>
+            <tr>
+              <td>53</td>
+              <td>TELEKINESIS - Travis Scott</td>
+              <td>8.7/10</td>
+            </tr>
           </table>
         </div>
+        <div class="divider">
+          <center>Song of the Week Average Rating</center>
+        </div>
+        <p id="celebOverall">461.2 / 54 ~= 8.54</p>
       </div>
     </div>
     <script src="background.js"></script>
